--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,6 @@
 **/.cache/
 **/.turbo/
+**/.turbo/turbo-*.log
 **/.DS_Store
 
 **/.env*
@@ -7,3 +8,17 @@
 **/dist/
 **/node_modules/
 **/out/
+
+# TypeScript
+**/tsconfig.tsbuildinfo
+
+# Vitest related
+**/coverage/
+**/.nyc_output/
+**/*.coverage.json
+**/coverage.json
+
+# Playwright related
+**/playwright-report/
+**/test-results/
+**/playwright/.cache/
