--- a/apps/server/.gitignore
+++ b/apps/server/.gitignore
@@ -1,9 +1,21 @@
 .cache/
 .turbo/
+**/.turbo/turbo-*.log
 .DS_Store
 
+# TypeScript
+tsconfig.tsbuildinfo
+
+# Environment variables
 .env*
 !.env.example
 
+# Build outputs
 dist/
 node_modules/
+
+# Vitest related
+coverage/
+.nyc_output/
+*.coverage.json
+coverage.json
