--- a/tools/playwright-config/.gitignore
+++ b/tools/playwright-config/.gitignore
@@ -1,3 +1,14 @@
+# Build outputs
 dist/
 node_modules/
 .turbo/
+**/.turbo/turbo-*.log
+.cache/
+
+# TypeScript
+tsconfig.tsbuildinfo
+
+# Playwright related
+playwright-report/
+test-results/
+playwright/.cache/
