chore: fix cmd biome lint, biome format ignore generator router, change theme

--- a/biome.json
+++ b/biome.json
@@ -66,6 +66,8 @@
       "node_modules/**",
       ".turbo/**",
       ".cache/**",
+      "**/*.gen.ts",
+      "**/*.gen.tsx",
       "coverage/**"
     ]
   },
