--- a/tools/tailwind/package.json
+++ b/tools/tailwind/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "tailwindcss": "catalog:",
     "tailwindcss-animate": "catalog:",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "catalog:"
   },
   "devDependencies": {}
 }
