--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,6 +6,7 @@ catalog:
   "@biomejs/biome": ^1.9.4
   "@hono/node-server": ^1.14.0
   "@hono/trpc-server": ^0.3.4
+  "@playwright/test": ^1.42.1
   "@radix-ui/react-avatar": ^1.1.3
   "@radix-ui/react-dialog": ^1.1.6
   "@radix-ui/react-dropdown-menu": ^2.1.6
@@ -56,6 +57,7 @@ catalog:
   tsup: ^8.4.0
   tsx: ^4.19.3
   turbo: ^2.5.0
+  tw-animate-css: ^1.2.5
   typescript: ^5.4.5
   url-join: ^5.0.0
   valibot: ^1.0.0
