--- a/tools/playwright-config/package.json
+++ b/tools/playwright-config/package.json
@@ -13,7 +13,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@playwright/test": "^1.42.1"
+    "@playwright/test": "catalog:"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
